syntax = "proto2";

package pb;

//首次登陆，客户端启动时请求
message loginRequest
{
    required string deviceId = 1; //设备码

    required int32 thirdAccountType = 3;
    required string thirdAccount = 4;
    required string thirdPasswd = 5;

    required int32 pfType = 6; //渠道类型
    required string version = 7;
}

message loginResponse
{
    required int32 errorCode = 1;
    required string ip = 2;
    required int32 port = 3;
    required string authCode = 4; //认证码，用于登陆其它服务器
    required int64 accountId = 5; //服务器分配的玩家帐号
}


//登陆游戏服务器
message gameServerLoginRequest
{
    required int64 accountId = 1;
    required string authCode = 2;
    required int32 pfType = 3;
    required string version = 4;
}

message gameServerLoginResponse
{
    required int32 errorCode = 1;
}
// 名字和头像同步
message syncBaseInfoRequest
{
    required int32 headImage = 1;
    required string nickname = 2;
}

message syncBaseInfoResponse
{
    required int32 errorCode = 1;
}

message pingRequest
{
    required int32 clientTime = 1;
}

message pingResponse
{
    required int32 errorCode = 1;
    required int32 clientTime = 2;
}


// 获取请求体力的好友名单
message getFriendListForStrengthRequesst
{
    required int32 placeholder = 1;
}

message getFriendListForStrengthResponse
{
    required int32 errorCode = 1;
    repeated uint64 accountIds = 2; // 好友账号id
}

message sendGameResumeRequest
{
    required LogGameResume data = 1;
}

message sendGameResumeResponse
{
    required int32 errorCode = 1;
}

message LogGameResume
{
    required int32 logtime = 2; //日志时间
    required string runtimeVersion = 3; //运行时版本
    required string networkType = 4; //网络类型
    required string deviceModel = 5; //设备型号
    required int32 androidSdk = 6; //安卓sdk

}